fix: footer menu position on tablet

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -13,7 +13,7 @@
     margin-bottom: 44px;
 
     @include onTablet {
-      margin-bottom: 100px;
+      margin-bottom: 104px;
     }
 
     @include onBig {
